# mc-clone

./: meson.build
shaders/: Cube_FP.glsl  Cube_VP.glsl  vertex.glsl
src/mc-clone/: example_layer.cpp  example_layer.h  example_object.cpp  example_object.h  mc_clone.cpp  meson.build
src/spirit/: log.h  main.cpp  meson.build  spirit.h
src/spirit/core/: application.cpp  application.h  base.h  entry_point.h  input.cpp  input.h  key_codes.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  meson.build  mouse_codes.h  object.cpp  object.h  object_stack.cpp  object_stack.h  window.cpp  window.h
src/spirit/engine/: sprtpch.h
src/spirit/event/: event.h  key_events.h  mouse_events.h  window_events.h
src/spirit/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  meson.build  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/glm/: meson.build
subprojects/stb_image/: meson.build
